# dataveil

./: .gitignore  README.md
backend/: .env.example  Dockerfile  requirements.txt
backend/app/: auth.py  config.py  database.py  main.py
backend/app/models/: __init__.py  audit_log.py  user_settings.py
backend/app/routers/: billing.py  logs.py  security.py  settings.py  stats.py
backend/app/schemas/: __init__.py  audit_log.py  user_settings.py
backend/tests/: test_logs.py
desktop/: index.html  package-lock.json  package.json
desktop/src/: TrayDashboard.tsx  api.ts  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
extension/: background.js  build-firefox.js  content.js  manifest.json
extension/pii/: scrubber.js  scrubber.test.js
extension/popup/: popup.html  popup.js
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ActivityHeatmap.tsx  AnimatedCounter.tsx  BreachChecker.tsx  CustomRulesEditor.tsx  HeroAnimation.tsx  KeywordsEditor.tsx  LiveScanner.tsx  PrivacyScore.tsx  ThemePicker.tsx
frontend/src/context/: ThemeContext.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Billing.tsx  Dashboard.tsx  Landing.tsx  Onboarding.tsx  Settings.tsx
