[package]
name = "dataveil-desktop"
version = "1.0.0"
description = "Dataveil system tray app"
authors = ["Dataveil"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[[bin]]
name = "dataveil-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.7", features = ["shell-open", "notification-all", "system-tray"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
